syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

enum ObjectStorageCodec {
    OBJECT_STORAGE_CODEC_UNSPECIFIED = 0;
    UNCOMPRESSED = 1;
    GZIP = 2;
    ZIP = 3;
    SNAPPY = 4;
    HADOOP_SNAPPY = 5;
}
enum ObjectStorageSerializationFormat {
    OBJECT_STORAGE_SERIALIZATION_FORMAT_UNSPECIFIED = 0;
    OBJECT_STORAGE_SERIALIZATION_FORMAT_JSON = 1;
    OBJECT_STORAGE_SERIALIZATION_FORMAT_CSV = 2;
    OBJECT_STORAGE_SERIALIZATION_FORMAT_RAW = 3;
}
message ObjectStorageTarget {
    string bucket = 1;
    string service_account_id = 8;
    string access_key = 2;
    string secret = 3;
    ObjectStorageSerializationFormat output_format = 4;
    string bucket_layout = 5;
    string buffer_size = 6;
    string buffer_interval = 7;
    ObjectStorageCodec output_encoding = 9;
}
